# hipTT

./: .gitignore  CMakeLists.txt  Makefile  Makefile.cuda  README.md
src/: CMakeLists.txt  CudaMem.cpp  CudaMem.h  CudaMemcpy.cpp  CudaMemcpy.h  CudaUtils.cpp  CudaUtils.h  LRUCache.h  TensorTester.cpp  TensorTester.h  cutt.cpp  cutt.h  cuttGpuModel.cpp  cuttGpuModel.h  cuttGpuModelKernel.cpp  cuttTimer.cpp  cuttTimer.h  cutt_bench.cpp  cutt_test.cpp  cuttkernel.cpp  cuttkernel.h  cuttplan.cpp  cuttplan.h
src/cuda/: CudaUtils.cu  CudaUtils.h  TensorTester.cu  cutt.cpp  cutt_test.cpp
src/hip_tmp/: CudaMem.cpp.prehip  TensorTester.cpp_inter  cutt.h.prehip  cuttGpuModelKernel.cpp.prehip  cuttGpuModelKernel.cpp_inter  cuttGpuModelKernel.cpp~  cutt_bench.cpp.prehip  cuttkernel.cpp.prehip  cuttkernel.cpp_inter  cuttkernel.cpp~  cuttkernel.h.prehip  cuttplan.cpp.prehip
